# hs-zerodb-client

./: README.md  zerodb-client.cabal
src/Database/: ZeroDB.hs
