name:                zerodb-client
version:             0.1.0
synopsis:            A client for the ZeroDB JSON API.
description:         A client for the ZeroDB JSON API.
homepage:            https://github.com/micxjo/hs-zerodb-client
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcio <micxjo@fastmail.com>
copyright:           (c) 2016 Micxjo Funkcio
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.ZeroDB
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , either
                     , errors
                     , hashable
                     , lens
                     , mtl
                     , text
                     , unordered-containers
                     , vector
                     , wreq
  default-language:    Haskell2010

test-suite zerodb-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base >= 4.7 && < 5
                     , zerodb-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/hs-zerodb-client
